# SSL_benchmarking

./: .gitignore  COLAB_QUICKSTART.md  COLAB_SETUP.md  JEPA_Benchmarking_Tests.ipynb  TESTING.md  TESTING_QUICKSTART.md  TEST_INFRASTRUCTURE.md  pyproject.toml  pytest.ini  requirements.txt
configs/: default.yaml  imagenet_full.yaml
evaluation/: __init__.py  feature_extraction.py  finetune.py  knn.py  linear_probe.py
models/: __init__.py  base.py  dinov1.py  dinov2.py  ibot.py  ijepa.py  lejepa.py  mae.py  utils.py
scripts/: run_benchmark.py  sanity_check.py
tests/: __init__.py  conftest.py  test_datasets.py  test_evaluators.py  test_models.py  test_reporting.py
utils/: __init__.py  datasets.py  reporting.py
