[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jepa-benchmark"
version = "0.1.0"
description = "Benchmarking environment for JEPA models against SSL baselines"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "timm>=0.9.0",
    "transformers>=4.30",
    "lightly>=1.5.0",
    "scikit-learn>=1.3",
    "faiss-cpu>=1.7.4",
    "wandb>=0.15",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
gpu = ["faiss-gpu>=1.7.4"]
xformers = ["xformers>=0.0.18"]

[project.scripts]
jepa-bench = "scripts.run_benchmark:main"

[tool.setuptools.packages.find]
include = ["evaluation*", "models*", "utils*", "scripts*", "configs*"]
